--- a/p8105_hw3_yx2710.Rmd
+++ b/p8105_hw3_yx2710.Rmd
@@ -64,7 +64,19 @@ instacart %>%
 
 A: The table is shown here.
 
-
+Q: Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+```{r}
+instacart %>% 
+  filter(product_name == c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
+  group_by(product_name, order_dow) %>% 
+  summarise(mean_hour = mean(order_hour_of_day)) %>% 
+  pivot_wider(
+    names_from = product_name,
+    values_from = mean_hour
+  ) %>% 
+  knitr::kable()
+```
+A: The table is shown here.
 
 
 
